@@ -80,7 +80,6 @@ public:
 
   User createUser( const Message&, const QHostAddress& );
   User createTemporaryUser( const QString& user_path, const QString& account_name );
-  QPixmap createUserPhoto( const User& );
   Chat createChat( const QList<VNumber>& user_list );
   Group createGroup( const QString& group_name, const QList<VNumber>& user_list );
   QString saveGroup( const Group& ) const;
@@ -92,8 +91,6 @@ public:
 
   QByteArray encryptByteArray( const QByteArray& text_to_encrypt, const QByteArray& cipher_key ) const;
   QByteArray decryptByteArray( const QByteArray& text_to_decrypt, const QByteArray& cipher_key ) const;
-
-  static QString simpleEncryptDecrypt( const QString& );
 
   static Protocol& instance()
   {
